children, siblings , find 정리

--- a/index6.html
+++ b/index6.html
@@ -33,9 +33,14 @@
     </style>
 </head>
 <body>
-
+    <!-- 참고 -->
+    <!-- $('.menu li').siblings() 실행 시 같은 위치에 있는 형제 태그를 검색 -->
+    <!-- $('.menu li').children() 실행 시 밑에 자식 태그인 a 를 검색 -->
+    <!-- $('.menu li').children().find('a[1]') 실행 시 밑에 있는 자식 태그인 a 태그 중 두번째 검색 -->
+    <!-- $('.menu li').children().find('a') 실행 시 밑에 있는 자식 태그인 a를 검색 -->
+    <!-- $('.menu li').children().find(*) 실행 시 밑에 있는 자식 태그들을 모두 검색 -->
     <ul class="menu">
-        <li>
+        <li>                
             <a href="#none">MENU-1</a>    
             <div class="sub-menu">
                 <a href="">SUB-MENU-1</a>
