--- a/index6.html
+++ b/index6.html
@@ -34,11 +34,10 @@
 </head>
 <body>
     <!-- 참고 -->
-    <!-- $('.menu li').siblings() 실행 시 같은 위치에 있는 형제 태그를 검색 -->
-    <!-- $('.menu li').children() 실행 시 밑에 자식 태그인 a 를 검색 -->
-    <!-- $('.menu li').children().find('a[1]') 실행 시 밑에 있는 자식 태그인 a 태그 중 두번째 검색 -->
-    <!-- $('.menu li').children().find('a') 실행 시 밑에 있는 자식 태그인 a를 검색 -->
-    <!-- $('.menu li').children().find(*) 실행 시 밑에 있는 자식 태그들을 모두 검색 -->
+    <!-- console.log($('.menu li').children()); : li태그 밑의 자식 태그인 a,div(sub-menu) 태그 두개를 모두 검색 -->
+    <!-- console.log($('.menu li').siblings()); : 현재 선택자의 위치와 동일한 형제 태그를 모두 검색 --> 
+    <!-- console.log($('.menu li').children().find('div')); : li 태그 밑의 자식 태그들 중 div를 검색 --> 
+    <!-- console.log($('.menu li').children().find('*')); : li 태그 밑의 자식 태그들 모두 검색-->
     <ul class="menu">
         <li>                
             <a href="#none">MENU-1</a>    
@@ -47,6 +46,7 @@
                 <a href="">SUB-MENU-2</a>
                 <a href="">SUB-MENU-3</a>
                 <a href="">SUB-MENU-4</a>
+                <div></div>
             </div>    
         </li>
         <li>
