parents, siblings, children, find 정리

--- a/index6.html
+++ b/index6.html
@@ -34,10 +34,12 @@
 </head>
 <body>
     <!-- 참고 -->
-    <!-- console.log($('.menu li').children()); : li태그 밑의 자식 태그인 a,div(sub-menu) 태그 두개를 모두 검색 -->
-    <!-- console.log($('.menu li').siblings()); : 현재 선택자의 위치와 동일한 형제 태그를 모두 검색 --> 
-    <!-- console.log($('.menu li').children().find('div')); : li 태그 밑의 자식 태그들 중 div를 검색 --> 
-    <!-- console.log($('.menu li').children().find('*')); : li 태그 밑의 자식 태그들 모두 검색-->
+    <!-- $('.menu li').parents();              : li태그 바로 위의 부모 태그인 ul.menu, body, html 태그를 모두 검색 -->
+    <!-- $('.menu li').parents('body');        : li태그 바로 위의 부모 태그인 ul.menu, body, html 中 body 태그를 검색 -->
+    <!-- $('.menu li').children();             : li태그 밑의 자식 태그인 a,div(sub-menu) 태그 두개를 모두 검색 -->
+    <!-- $('.menu li').siblings();             : 현재 선택자의 위치와 동일한 형제 태그를 모두 검색 --> 
+    <!-- $('.menu li').children().find('div'); : li 태그 밑의 자식 태그들 중 div를 검색 --> 
+    <!-- $('.menu li').children().find('*');   : li 태그 밑의 자식 태그들 모두 검색-->
     <ul class="menu">
         <li>                
             <a href="#none">MENU-1</a>    
