--- a/index6.html
+++ b/index6.html
@@ -40,6 +40,7 @@
     <!-- $('.menu li').siblings();             : 현재 선택자의 위치와 동일한 형제 태그를 모두 검색 --> 
     <!-- $('.menu li').children().find('div'); : li 태그 밑의 자식 태그들 중 div를 검색 --> 
     <!-- $('.menu li').children().find('*');   : li 태그 밑의 자식 태그들 모두 검색-->
+    <!-- $('.menu li a').eq(2);                : li 태그의 자식인 a 태그의 세번째 위치 , SUB-MENU-3-->
     <ul class="menu">
         <li>                
             <a href="#none">MENU-1</a>    
